// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Head /> matches snapshot 1`] = `
<Link
  href="corporis sed veritatis quidem praesentium magnam fugiat"
>
  <img
    onError={[Function]}
  />
</Link>
`;

exports[`<Head /> matches snapshot 2`] = `
<Link
  href="maiores recusandae fuga reprehenderit soluta non omnis"
>
  <img
    onError={[Function]}
  />
</Link>
`;

exports[`<Head /> matches snapshot 3`] = `
<img
  alt="perferendis dolorum cupiditate illum saepe ut assumenda"
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 4`] = `
<Link
  href="exercitationem omnis laborum exercitationem est sapiente laudantium"
>
  <img
    onError={[Function]}
    src="assumenda quasi adipisci mollitia iste itaque omnis"
  />
</Link>
`;

exports[`<Head /> matches snapshot 5`] = `
<img
  onError={[Function]}
  src="et non explicabo dolores ipsam laboriosam non"
/>
`;

exports[`<Head /> matches snapshot 6`] = `
<img
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 7`] = `
<img
  alt="at sint dolores fugiat quis et voluptas"
  onError={[Function]}
  src="in sunt occaecati nulla aut sunt est"
/>
`;

exports[`<Head /> matches snapshot 8`] = `
<img
  alt="sint officiis qui dignissimos dolore qui voluptatem"
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 9`] = `
<img
  alt="autem quam qui facere in ut odit"
  onError={[Function]}
  src="quisquam aut consequatur sint provident aut ullam"
/>
`;

exports[`<Head /> matches snapshot 10`] = `
<Link
  href="occaecati at odit tempora at modi occaecati"
>
  <img
    alt="consequatur itaque et in fugit in rerum"
    onError={[Function]}
    src="laborum quos eum voluptate sit saepe assumenda"
  />
</Link>
`;

exports[`<Head /> matches snapshot 11`] = `
<img
  alt="libero aut autem ut ullam et possimus"
  onError={[Function]}
  src="ut ducimus fugiat et et aut quidem"
/>
`;

exports[`<Head /> matches snapshot 12`] = `
<img
  alt="et optio consequatur velit voluptate necessitatibus excepturi"
  onError={[Function]}
  src="minus quo sunt possimus earum animi quis"
/>
`;

exports[`<Head /> matches snapshot 13`] = `
<Link
  href="nesciunt provident eaque atque quos rerum nobis"
>
  <img
    onError={[Function]}
  />
</Link>
`;

exports[`<Head /> matches snapshot 14`] = `
<Link
  href="accusantium molestiae non sint et ipsa consequuntur"
>
  <img
    alt="quis quis nobis repudiandae aliquam molestiae occaecati"
    onError={[Function]}
    src="dolorem quia consequatur omnis ab assumenda animi"
  />
</Link>
`;

exports[`<Head /> matches snapshot 15`] = `
<img
  alt="quia aut sint cumque sunt mollitia quibusdam"
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 16`] = `
<img
  onError={[Function]}
  src="est labore sed rerum nesciunt voluptas rem"
/>
`;

exports[`<Head /> matches snapshot 17`] = `
<img
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 18`] = `
<img
  alt="voluptas eos quam consequatur ipsam sed nobis"
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 19`] = `
<img
  alt="occaecati eveniet aut eligendi iusto sed pariatur"
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 20`] = `
<img
  alt="enim rem qui hic dolore quibusdam quasi"
  onError={[Function]}
  src="quis ratione eveniet ea totam aut aut"
/>
`;

exports[`<Head /> matches snapshot 21`] = `
<Link
  href="explicabo at quae autem eligendi nihil quis"
>
  <img
    onError={[Function]}
    src="sit voluptas dicta non dolore autem aut"
  />
</Link>
`;

exports[`<Head /> matches snapshot 22`] = `
<img
  onError={[Function]}
  src="laboriosam tempore voluptatibus reiciendis ut eos commodi"
/>
`;

exports[`<Head /> matches snapshot 23`] = `
<img
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 24`] = `
<img
  alt="accusamus molestiae quia est reprehenderit commodi perspiciatis"
  onError={[Function]}
  src="quasi distinctio reiciendis perspiciatis ut illo sit"
/>
`;

exports[`<Head /> matches snapshot 25`] = `
<img
  alt="aut dolorem in non dolorem nihil optio"
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 26`] = `
<img
  alt="consequatur provident qui delectus qui qui ab"
  onError={[Function]}
  src="impedit dolores saepe dolor incidunt vero quia"
/>
`;

exports[`<Head /> matches snapshot 27`] = `
<img
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 28`] = `
<img
  alt="officiis sed illum et ea quia sunt"
  onError={[Function]}
  src="et voluptas repellendus nisi corrupti quas eligendi"
/>
`;

exports[`<Head /> matches snapshot 29`] = `
<img
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 30`] = `
<img
  alt="perferendis soluta dignissimos cum non ea sed"
  onError={[Function]}
  src="non nulla sit officia doloremque non sit"
/>
`;

exports[`<Head /> matches snapshot 31`] = `
<img
  onError={[Function]}
/>
`;

exports[`<Head /> matches snapshot 32`] = `
<img
  alt="odit in eos sunt ipsum saepe veritatis"
  onError={[Function]}
  src="inventore vitae sint eligendi quis excepturi veritatis"
/>
`;
